feat: implement company entity and update job associations